# A-multi-agent-collaborative-code-review-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  数据结构与算法.html
docs/superpowers/plans/: 2026-07-05-code-review-github-layer.md
docs/week3/: day5-generation.txt
docs/week4/: day7-周复盘.txt
frontend/: .dockerignore  Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/report/[id]/: page.tsx
frontend/src/app/task/[id]/: page.tsx
frontend/src/lib/: api.ts
src/study_agent/: adversarial_demo.py  agent_evaluation_demo.py  agent_trace_demo.py  framework_guide_demo.py  langgraph_router_demo.py  multi_agent_demo.py  plan_execute_demo.py  react_vs_fc_demo.py  w3d5_generation_demo.py
src/study_agent/agent/: __init__.py  adversarial_cases.py  adversarial_tester.py  agent_eval_cases.py  agent_evaluator.py  agent_guard.py  autogen_research_team.py  bus_orchestrator.py  bus_orchestrator_demo.py  code_review_agents.py  code_review_demo.py  communication_demo.py  conflict_resolver.py  conflict_resolver_demo.py  crewai_research_crew.py  framework_guide.py  integration_test.py  langgraph_router.py  message_bus.py  message_protocol.py  plan_execute_agent.py  react_agent.py  research_tools.py  state.py  state_demo.py  trace.py  trace_exporter.py  traced_agent.py
src/study_agent/api/: __init__.py  database.py  models.py  server.py  task_manager.py
src/study_agent/config/: settings.py
src/study_agent/github/: __init__.py  client.py  comment_poster.py  diff_fetcher.py  token_validator.py  webhook.py
src/study_agent/llm/: __init__.py  retry.py  structured.py
src/study_agent/memory/: __init__.py  base.py  buffer.py  comparator.py  demo.py  hybrid.py  hybrid_demo.py  summary.py  vector.py
src/study_agent/prompt/: __init__.py  evaluator.py  examples.py  templates.py  test_cases.py
src/study_agent/prompt/templates/: code_review.j2  rag_generation.j2  system_base.j2
src/study_agent/tools/: __init__.py  builtin_tools.py  tool_loop.py
tests/: test_comment_poster.py  test_database.py  test_diff_fetcher.py  test_github_client.py  test_models.py  test_server.py  test_task_manager.py  test_token_validator.py  test_webhook.py
